--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "@clerk/clerk-react": "^5.50.0",
     "@tailwindcss/vite": "^4.1.14",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
-    "tailwindcss": "^4.1.14"
+    "swiper": "^12.0.2",
+    "tailwindcss": "^4.1.14",
+    "whisper-node": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
