--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,12 @@
   "type": "module",
   "dependencies": {
     "@clerk/express": "^1.7.37",
-    "cloudinary": "^2.7.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.9",
     "stripe": "^19.1.0",
