--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
+    "react-scrollbars-custom": "^4.1.1",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.14",
     "whisper-node": "^1.1.1"
