--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.50.0",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.7",
     "@tailwindcss/vite": "^4.1.14",
     "@uiw/react-markdown-preview": "^5.1.5",
     "@uiw/react-md-editor": "^4.0.8",
     "axios": "^1.12.2",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
     "react": "^19.1.1",
@@ -24,6 +27,7 @@
     "react-router-dom": "^7.9.3",
     "react-scrollbars-custom": "^4.1.1",
     "swiper": "^12.0.2",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "whisper-node": "^1.1.1"
   },
