--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "dependencies": {
     "@clerk/express": "^1.7.37",
+    "@google/generative-ai": "^0.24.1",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
